@@ -1,0 +1,74 @@
+CVM_SASL_PLAIN=$tmp/cvm
+export CVM_SASL_PLAIN
+
+ifauth <<EOF
+0 CAPABILITY
+1 CAPABILITY SASL
+EOF
+
+export CAPABILITY="CAPS3"
+ifauth <<EOF
+2 CAPABILITY
+EOF
+
+export CAPABILITY="IMAP4rev1 CAPS4"
+ifauth <<EOF
+3 CAPABILITY
+EOF
+
+unset CAPABILITY
+export IMAP_ACL=0
+ifauth <<EOF
+4 CAPABILITY
+EOF
+
+export IMAP_ACL=1
+ifauth <<EOF
+5 CAPABILITY
+EOF
+
+unset IMAP_ACL
+export OUTBOX=
+ifauth <<EOF
+6 CAPABILITY
+EOF
+
+export OUTBOX=.SOMEBOX
+ifauth <<EOF
+7 CAPABILITY
+EOF
+
+unset OUTBOX
+export IMAP_MOVE_EXPUNGE_TO_TRASH=0
+ifauth <<EOF
+8 CAPABILITY
+EOF
+
+export IMAP_MOVE_EXPUNGE_TO_TRASH=1
+ifauth <<EOF
+9 CAPABILITY
+EOF
+
+unset IMAP_MOVE_EXPUNGE_TO_TRASH
+unset CVM_SASL_PLAIN
+
+<result>
+* CAPABILITY IMAP4rev1^M
+0 OK CAPABILITY completed^M
+1 BAD Syntax error: command requires no arguments^M
+* CAPABILITY IMAP4rev1 CAPS3^M
+2 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1 CAPS4^M
+3 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1^M
+4 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1 ACL ACL2=UNION^M
+5 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1^M
+6 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1 XCOURIEROUTBOX=INBOX.SOMEBOX^M
+7 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1^M
+8 OK CAPABILITY completed^M
+* CAPABILITY IMAP4rev1 XMAGICTRASH^M
+9 OK CAPABILITY completed^M
